add initial scenario for performance tuning